# botan

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml  next.config.ts  package.json  tsconfig.json  vite.config.ts
.github/workflows/: worker_ci.yaml
core/: Cargo.toml
core/migration/: Cargo.toml
core/migration/src/: lib.rs  m20250611_074134_create_initial_tables.rs
core/src/: api_auth.rs  auth.rs  client.rs  conversions.rs  database.rs  error.rs  lib.rs  models.rs  pipeline.rs
core/src/entities/: friendships.rs  mod.rs  prelude.rs  user_attribute_history.rs  user_location_history.rs  users.rs
core/src/models/: mod.rs  response.rs
core/src/services/: event_service.rs  user_service.rs
next/: App.tsx  next.config.ts  package.json  tailwind.config.js  tsconfig.json
next/app/: layout.tsx  page.tsx
next/app/components/: EmailOtpDialog.tsx  FriendBox.tsx  FriendList.tsx  FriendsPage.tsx  LanguageSwitcher.tsx  TwoFactorDialog.tsx
next/app/hooks/: useClientTranslations.ts
next/app/login/: page.tsx
next/app/main/: page.tsx
next/app/store/: authStore.ts  friendStore.ts
next/i18n/: config.ts
next/messages/: en-US.json  zh-CN.json
next/theme/: index.ts
server/: Cargo.toml
server/src/: api_auth.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  core_logic.rs  lib.rs  main.rs  models.rs
src/app/: page.tsx
src/theme/: ThemeContext.tsx
worker/: Cargo.toml
worker/src/: main.rs
