[package]
name = "botan_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22"
percent-encoding = "2.3"
thiserror = "2.0.12"
vrchatapi = "1.19.3"
