[package]
name = "botan_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
percent-encoding = "2.3"
thiserror = "2.0.12"
vrchatapi = "1.19.3"
magic-crypt = "4.0.1"
reqwest_cookie_store = "0.8.0"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
sea-orm = { version = "1.1.12", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros"
] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
url = "2.5.4"
migration = { version = "0.1.0", path = "migration" }
