[package]
name = "botan"
version = "0.1.0"
description = "A Tauri App"
authors = ["Map1en"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "botan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
botan_core = { path = "../core" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2.4.4"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
percent-encoding = "2.3.1"
tokio = "1.45.1"
uuid = "1.17.0"
log = "0.4.27"
reqwest = "0.12.15"
env_logger = "0.11.8"

