[package]
name = "botan_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
botan_core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
